WIP on how locations passed to front-end